--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -73,3 +73,9 @@ round_sync:
 
 cryptomator:
   - org.cryptomator.lite/org.cryptomator.presentation.ui.activity.VaultListActivity
+
+sync_pride:
+  - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Pride
+
+sync_blm:
+  - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Blm
