--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -79,3 +79,6 @@ sync_pride:
 
 sync_blm:
   - io.syncapps.lemmy_sync/io.syncapps.lemmy_sync.ui.activities.HomeActivity.Blm
+
+notification_dictionary:
+  - com.xtreak.notificationdictionary/com.xtreak.notificationdictionary.MainActivity
