--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,27 @@ sync_blm:
 
 notification_dictionary:
   - com.xtreak.notificationdictionary/com.xtreak.notificationdictionary.MainActivity
+
+batt:
+  - com.porg.batt/com.porg.batt.MainActivity
+
+lightmeter:
+  - com.vodemn.lightmeter/com.vodemn.lightmeter.MainActivity
+
+my_server_status:
+  - com.jgeek00.my_server_status/com.jgeek00.my_server_status.MainActivity
+
+newquiz:
+  - com.infinitepower.newquiz/com.infinitepower.newquiz.ui.main.MainActivity
+
+openai_sense:
+  - com.f0x1d.sense/com.f0x1d.sense.ui.activity.MainActivity
+
+papricoin:
+  - ru.tech.papricoin/ru.tech.papricoin.presentation.MainActivity
+
+rays:
+  - com.skyd.rays/com.skyd.rays.ui.activity.MainActivity
+
+rvx_manager:
+  - app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity
