Add Google Play Dev Console Alternative icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -106,3 +106,5 @@ rays:
 
 rvx_manager:
   - app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity
+
+google_play_developer_console_alt_1: {}
