--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -106,3 +106,12 @@ rays:
 
 rvx_manager:
   - app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity
+
+nagwa_classes:
+  - com.nagwa.classes/com.nagwa.classes.MainActivity
+
+my_etisalat:
+  - com.etisalat/com.etisalat.view.splash.SplashActivity
+
+routora:
+ - com.routora.app/com.routora.app.MainActivity
