Add Naukri.com icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -108,3 +108,6 @@ rvx_manager:
   - app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity
 
 google_play_developer_console_alt_1: {}
+
+naukri_com:
+  - naukriApp.appModules.login/com.naukri.splash.SplashActivity
