--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -111,3 +111,12 @@ google_play_developer_console_alt_1: {}
 
 naukri_com:
   - naukriApp.appModules.login/com.naukri.splash.SplashActivity
+
+aniyomi_preview:
+  - xyz.jmir.tachiyomi.mi.debug/eu.kanade.tachiyomi.ui.main.MainActivity
+
+gms_flags:
+  - ua.polodarb.gmsflags/ua.polodarb.gmsflags.ui.MainActivity
+
+tidy:
+  - com.slavabarkov.tidy/com.slavabarkov.tidy.MainActivity
