add icon, credits to @Otemachi

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -128,3 +128,6 @@ my_etisalat:
 
 routora:
  - com.routora.app/com.routora.app.MainActivity
+
+gacha_life_2:
+  - air.com.lunime.gachalife2/air.com.lunime.gachalife2.AIRAppEntry
