new 12 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -131,3 +131,45 @@ routora:
 
 gacha_life_2:
   - air.com.lunime.gachalife2/air.com.lunime.gachalife2.AIRAppEntry
+
+mdcalc:
+  - com.mdaware.mdcalc/com.mdaware.mdcalc.MainActivity
+
+etk:
+  - com.advaitaunicorn.etk/ru.novacard.transport.activity.NewMainActivity
+
+vk_video:
+  - com.vk.vkvideo/com.vk.video.screens.main.MainActivity
+
+nashe_radio:
+  - ru.nashe.player/com.infteh.radiotemplate.RTActivity
+
+tattelecom_intercom:
+  - ru.tattelecom.intercom/ru.tattelecom.intercom.main.MainActivity
+
+dns_shop:
+  - ru.dns.shop.android/ru.dns.shop.HostActivity
+
+rosneft:
+  - ru.pichesky.rosneft/ru.pichesky.rosneft.SplashActivity
+
+talenta:
+  - co.talenta/co.talenta.modul.splash.SplashActivity
+
+fatmap:
+  - com.fatmaprn/com.fatmaprn.MainActivity
+
+reflect:
+  - com.ensparkle.app/com.ensparkle.app.presentation.login.LoginActivity
+
+a_better_routeplanner:
+  - com.iternio.abrpapp/com.iternio.abrpapp.MainActivity
+
+kfc:
+  - com.kfcecuador.kfc/com.kfcecuador.kfc.MainActivity
+
+aston_villa:
+  - com.incrowdsports.football.villa/io.urbanzoo.gamechanger.versions.shared.activities.SplashActivity
+
+kjv_bible:
+  - org.hlwd.bible/org.hlwd.bible.MainActivity
