--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,6 +8,10 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+marvin:
+  - com.amazingmarvin.marvin/com.amazingmarvin.marvin.MainActivity
+
 raneen:
   - com.raneen.mobapp/com.raneen.mobapp.MainActivity
 
