--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -177,3 +177,9 @@ aston_villa:
 
 kjv_bible:
   - org.hlwd.bible/org.hlwd.bible.MainActivity
+
+kaizoyu:
+  - com.astarivi.kaizoyu/com.astarivi.kaizoyu.MainActivity
+
+mangayomi:
+  - com.kodjodevf.mangayomi/com.kodjodevf.mangayomi.MainActivity
