--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -183,3 +183,7 @@ kaizoyu:
 
 mangayomi:
   - com.kodjodevf.mangayomi/com.kodjodevf.mangayomi.MainActivity
+
+wallman:
+  - com.colorata.wallman/com.colorata.wallman.shared.MainActivity
+  - com.colorata.wallman.preview/com.colorata.wallman.MainActivity
