--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,15 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+circles:
+  - org.futo.circles/org.futo.circles.MainActivity
+
+dantotsu:
+  - ani.dantotsu/ani.dantotsu.MainActivity
+
+futo_voice_input:
+  - org.futo.voiceinput/org.futo.voiceinput.settings.SettingsActivity
+
+yuzu:
+  - org.yuzu.yuzu_emu/org.yuzu.yuzu_emu.ui.main.MainActivity
