--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,6 +8,14 @@
 #
 # new_icon_2_alt_1: {}
 #
+deen:
+  - com.deen/com.deen.MainActivity
+
+etisalat_cash:
+  - com.etisalat.flous/com.etisalat.flous.MainActivity
+
+white_border:
+  - com.vector123.whiteborder/com.vector123.blank.activity.HomeActivity
 
 circles:
   - org.futo.circles/org.futo.circles.MainActivity
