Add HabitNow icon, Remove duplicated vector file

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -28,3 +28,6 @@ futo_voice_input:
 
 yuzu:
   - org.yuzu.yuzu_emu/org.yuzu.yuzu_emu.ui.main.MainActivity
+
+habitnow:
+  - com.habitnow/com.habit.now.apps.activities.splashActivity.StartingActivity
