add missing lines to process leftover icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,9 @@ yuzu_emulator:
 
 yuzu_emulator_early_access:
   - org.yuzu.yuzu_emu.ea/org.yuzu.yuzu_emu.ui.main.MainActivity
+
+peercoin_wallet:
+  - com.coinerella.peercoin/com.coinerella.peercoin.MainActivity
+
+buienradar:
+  - com.supportware.Buienradar/nl.rtl.buienradar.main.MainActivity
