new 12 icons, 2 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,44 @@ buienradar:
 habitnow:
   - com.habitnow/com.habit.now.apps.activities.splashActivity.StartingActivity
 
+kredobank:
+  - ua.android.kredobank.prod/ua.android.kredobank.ui.activity.LoginActivity
+
+score_counter:
+  - ua.napps.scorekeeper/ua.napps.scorekeeper.app.MainActivity
+
+my_lifecell:
+  - com.life.my/com.efectura.lifecell2.ui.activity.SplashActivity
+
+ftc:
+  - ru.ftc.tc/io.flutter.embedding.android.FlutterFragmentActivity
+
+omnivore:
+  - app.omnivore.omnivore/app.omnivore.omnivore.MainActivity
+
+audiobookshelf:
+  - com.audiobookshelf.app/com.audiobookshelf.app.MainActivity
+
+jiopos_lite:
+  - com.jio.poslite/com.jio.poslite.activities.SplashScreenActivity
+
+coloros_security:
+  - com.coloros.safecenter/com.coloros.safecenter.FakeActivity
+
+canal_plus:
+  - com.canal.android.canal/com.canal.ui.mobile.MainActivity
+
+ausweisapp2:
+  - com.governikus.ausweisapp2/com.governikus.ausweisapp2.MainActivity
+
+bsnl_selfcare:
+  - com.digital.bsnl.selfcare/com.selfcare.mybsnl.activities.SplashActivity
+
+gopay:
+  - com.gojek.gopay/com.gojek.gopay.MainActivity
+
+color_picker:
+  - ua.com.compose.colorpicker.camera.image/ua.com.compose.view.main.MainActivity
+
+nekobox:
+  - moe.nb4a/io.nekohasekai.sagernet.ui.MainActivity
