add Sony Videography icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,8 @@ color_picker:
 
 nekobox:
   - moe.nb4a/io.nekohasekai.sagernet.ui.MainActivity
+
+sony_videography:
+  - jp.co.sony.mc.videopro/jp.co.sony.mc.videopro.VideoProActivity
+
+sony_videography_alt_1: {}
