--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -87,3 +87,25 @@ sony_videography:
   - jp.co.sony.mc.videopro/jp.co.sony.mc.videopro.VideoProActivity
 
 sony_videography_alt_1: {}
+
+animescrap:
+  - com.talent.animescrap/com.talent.animescrap.ui.activities.SplashActivity
+
+audile:
+  - com.mrsep.musicrecognizer/com.mrsep.musicrecognizer.presentation.MainActivity
+  - com.mrsep.musicrecognizer.debug/com.mrsep.musicrecognizer.presentation.MainActivity
+
+coinwatch:
+  - dev.shorthouse.coinwatch/dev.shorthouse.coinwatch.MainActivity
+
+diaryvault:
+  - me.sankethbk.dairyapp/com.example.dairy_app.MainActivity
+
+nogravityapp:
+  - org.pierre2324.nogravity/org.pierre2324.nogravity.StartupScreen
+
+oinkoin:
+  - com.github.emavgl.piggybankpro/com.example.piggybank.MainActivity
+
+soul_searching:
+  - com.github.soulsearching/com.github.soulsearching.MainActivity
