Added Zoho OneAuth icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -109,3 +109,6 @@ oinkoin:
 
 soul_searching:
   - com.github.soulsearching/com.github.soulsearching.MainActivity
+
+oneauth:
+  - com.zoho.accounts.oneauth/com.zoho.accounts.oneauth.v2.ui.applock.AppLockActivity
