add irplus icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -112,3 +112,12 @@ soul_searching:
 
 oneauth:
   - com.zoho.accounts.oneauth/com.zoho.accounts.oneauth.v2.ui.applock.AppLockActivity
+
+irplus:
+  - net.binarymode.android.irplus/net.binarymode.android.irplus.MainTabbedActivity
+
+irplus_lan:
+  - net.binarymode.android.irpluslan/net.binarymode.android.irplus.MainTabbedActivity
+
+irplus_wave:
+  - net.binarymode.android.irpluswave/net.binarymode.android.irplus.MainTabbedActivity
