add missing compinfos and remove remnants

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -121,3 +121,6 @@ irplus_lan:
 
 irplus_wave:
   - net.binarymode.android.irpluswave/net.binarymode.android.irplus.MainTabbedActivity
+
+edenred:
+  - com.edenred.eq.myedenred/com.edenred.eq.myedenred.MainActivity
