reorganize Synology icons and add missing compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -124,3 +124,6 @@ irplus_wave:
 
 edenred:
   - com.edenred.eq.myedenred/com.edenred.eq.myedenred.MainActivity
+
+synology_ds_cam:
+  - com.synology.DScam/com.synology.dscam.activities.SplashActivity
