new icons and compinfos (#707)
* add irplus icons

* reupload OneAuth icon (forgot to hide layers with a previously commited icon)

* add missing compinfos and remove remnants

* reorganize Synology icons and add missing compinfo

* new 24 icons, new 2 compinfos, reworked 4 icons

* remove irplus.png

* remove irplus.svg

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -112,3 +112,90 @@ soul_searching:
 
 oneauth:
   - com.zoho.accounts.oneauth/com.zoho.accounts.oneauth.v2.ui.applock.AppLockActivity
+
+irplus:
+  - net.binarymode.android.irplus/net.binarymode.android.irplus.MainTabbedActivity
+
+irplus_lan:
+  - net.binarymode.android.irpluslan/net.binarymode.android.irplus.MainTabbedActivity
+
+irplus_wave:
+  - net.binarymode.android.irpluswave/net.binarymode.android.irplus.MainTabbedActivity
+
+edenred:
+  - com.edenred.eq.myedenred/com.edenred.eq.myedenred.MainActivity
+
+synology_ds_cam:
+  - com.synology.DScam/com.synology.dscam.activities.SplashActivity
+
+bookmate:
+  - ru.plus.bookmate/com.bookmate.DefaultIcon
+
+dicio_assistant:
+  - org.stypox.dicio/org.stypox.dicio.MainActivity
+
+color_grab:
+  - com.loomatix.colorgrab/com.loomatix.colorgrab.SplashActivity
+
+apk_analyzer:
+  - sk.styk.martin.apkanalyzer/sk.styk.martin.apkanalyzer.ui.main.MainActivity
+
+retro_bowl_college:
+  - com.newstargames.retrobowlcollege/com.newstargames.retrobowlcollege.RunnerActivity
+
+tele2:
+  - kz.tele2.app/kz.sardarpro.tele2.ui.launcher.LauncherActivity
+
+tele2_my:
+  - ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity
+
+agora:
+  - fr.gouv.agora/fr.social.gouv.agora.MainActivity
+
+mindmeister:
+  - com.meisterlabs.mindmeister/com.meisterlabs.mindmeister.feature.login.StartupActivity
+
+light_grid:
+  - com.joko.lightgrid/com.joko.wp.settings.SettingsProxy
+
+light_grid_pro:
+  - com.joko.lightgridpro/com.joko.wp.settings.SettingsProxy
+
+medcard24:
+  - net.medcard24.patient/net.medcard24.patient.ui.activities.SplashActivity
+
+microsoft_edge_beta:
+  - com.microsoft.emmx.beta/com.microsoft.ruby.Main
+
+agenda_ischolar:
+  - com.infinitech.ischolar/com.infinitech.ischolar.MainActivity
+
+beauty_bay:
+  - com.beautybay/com.beautybay.MainActivity
+
+george_cesko:
+  - cz.csas.georgego/at.beeone.george.SplashScreenActivity
+
+al_baraka_bank:
+  - pk.com.albaraka.mobileapp/com.avanza.ambitwizz.splash.SplashActivity
+
+desire_couples:
+  - com.desireapps.desire/com.desireapps.desire.SplashScreen
+
+circle_k:
+  - com.circlekeurope.android/com.cke.circlek.activities.SplashActivity
+
+my_epic:
+  - com.vailresorts.epicmix/fr.lumiplan.app.LauncherDefault
+
+wim_hof_method:
+  - nl.deckeron.apps.innerfire/nl.deckeron.apps.innerfire.ActivityEntry
+
+manabox:
+  - skilldevs.com.manabox/skilldevs.com.manabox.MainActivity
+
+national_park_service:
+  - gov.nps.mobileapp/gov.nps.mobileapp.ui.EmptyActivity
+
+speedway:
+  - com.speedway.mobile/com.speedway.mobile.base.SplashActivity
