--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,6 @@
 #
 moomoo:
   - com.moomoo.trade/cn.futu.trader.launch.activity.LaunchActivity
+
+agape:
+  - com.getdailyagape/com.example.agape_app.MainActivity
