Add Costa icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -13,3 +13,6 @@ moomoo:
 
 agape:
   - com.getdailyagape/com.example.agape_app.MainActivity
+
+costa:
+  - uk.co.club.costa.costa/uk.co.costa.welcomemodule.splash.SplashActivity
