Add moomoo, Agapé and Costa icons (#708)
* Add moomoo icon

* Add Agapé icon

* Fix Agape icon

* Add Costa icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+moomoo:
+  - com.moomoo.trade/cn.futu.trader.launch.activity.LaunchActivity
+
+agape:
+  - com.getdailyagape/com.example.agape_app.MainActivity
+
+costa:
+  - uk.co.club.costa.costa/uk.co.costa.welcomemodule.splash.SplashActivity
