Updated SwiftKey Keyboard (#709)
* Add files via upload

* Add files via upload

* Update drawable.xml

* Update drawable.xml

* Add files via upload

* Update new_icons.yaml

* Update contributors.xml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,6 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+swift__key_alt_1: {}
+
 moomoo:
   - com.moomoo.trade/cn.futu.trader.launch.activity.LaunchActivity
 
