rename George Cesko -> George Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -19,3 +19,6 @@ agape:
 
 costa:
   - uk.co.club.costa.costa/uk.co.costa.welcomemodule.splash.SplashActivity
+
+george_bank:
+  - ro.bcr.georgego/at.beeone.george.SplashScreenActivity
