--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -19,3 +19,18 @@ agape:
 
 costa:
   - uk.co.club.costa.costa/uk.co.costa.welcomemodule.splash.SplashActivity
+
+george_bank:
+  - ro.bcr.georgego/at.beeone.george.SplashScreenActivity
+
+upside:
+  - com.upside.consumer.android/com.upside.consumer.android.activities.MainActivity
+
+proshot:
+  - com.riseupgames.proshot2/com.riseupgames.proshot2.activities.PermissionsActivity
+
+my_chihiros:
+  - cn.chihiros.chihiros_magic_new/cn.chihiros.chihiros_magic_new.MainActivity
+
+unfold:
+  - com.moonlab.unfold/com.moonlab.unfold.AppStarterRouterActivity
