--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,3 +34,10 @@ my_chihiros:
 
 unfold:
   - com.moonlab.unfold/com.moonlab.unfold.AppStarterRouterActivity
+
+camera:
+  - com.motorola.odm.camera3/com.android.camera.CameraLauncher
+  - arn.android.gcam/com.android.camera.CameraLauncher
+
+board_game_stats:
+  - nl.eerko.boardgamestats/nl.eerko.boardgamestats.main.SplashActivity
