Add Folder in Folder icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,6 @@ camera:
 
 board_game_stats:
   - nl.eerko.boardgamestats/nl.eerko.boardgamestats.main.SplashActivity
+
+folder_in_folder:
+  - com.ss.folderinfolder/com.ss.folderinfolder.LaunchActivity
