Add Athanotify icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,6 @@ board_game_stats:
 
 folder_in_folder:
   - com.ss.folderinfolder/com.ss.folderinfolder.LaunchActivity
+
+athanotify:
+  - com.athanotify/com.athanotify.MainActivity
