Add First Bus icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,6 @@ folder_in_folder:
 
 athanotify:
   - com.athanotify/com.athanotify.MainActivity
+
+first_bus:
+  - com.firstgroup.first.bus/com.firstgroup.splash.controller.SplashActivity
