Add Minimal Watch Faces, Arc and mucke icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,12 @@
 #
 pluxee_in:
   - in.zeta.android/in.apollo.android.ui.activity.SplashScreenActivity
+
+minimal_watch_faces:
+  - com.benoitletondor.pixelminimalwatchface/com.benoitletondor.pixelminimalwatchfacecompanion.view.MainActivity
+
+arc:
+  - com.quadren.arc/com.quadren.arc.MainActivity
+
+mucke:
+  - rocks.mucke.github/com.ryanheise.audioservice.AudioServiceActivity
