Add BroadLink icon and mucke ComponentInfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,9 @@ minimal_watch_faces:
 
 arc:
   - com.quadren.arc/com.quadren.arc.MainActivity
+
+mucke:
+  - rocks.mucke.github/com.ryanheise.audioservice.AudioServiceActivity
+
+broadlink:
+  - cn.com.broadlink.econtrol.international/cn.com.broadlink.unify.app.main.activity.LoadingActivity
