Added 2 new icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,9 @@ mucke:
 
 broadlink:
   - cn.com.broadlink.econtrol.international/cn.com.broadlink.unify.app.main.activity.LoadingActivity
+
+goibibo:
+  - com.goibibo/com.goibibo.common.HomeActivity
+
+xiaomi_service:
+  - com.xiaomi.mi_care/com.xiaomi.mi_care.MainActivity
