--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -332,3 +332,15 @@ no_icon:
 
 np_manager:
   - player.normal.np/player.normal.np.activity.GuideActivity
+
+applist_detector:
+  - com.byxiaorun.detector/com.byxiaorun.detector.MainActivity
+
+permission_manager_x:
+  - com.mirfatif.permissionmanagerx/com.mirfatif.permissionmanagerx.fwk.MainActivityM
+
+zip:
+  - com.quadpay.quadpay/com.quadpay.quadpay.SplashActivity
+
+mt_manager:
+  - bin.mt.plus/bin.mt.plus.MainLightIcon
