add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,13 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+devcheck:
+  - flar2.devcheck/flar2.devcheck.ui.MainActivity2
+
+adguard:
+  - com.adguard.android/com.adguard.android.ui.activity.MainActivity
+  - com.adguard.android/com.adguard.android.ui.activity.SplashActivity
+
+magic_earth:
+  - com.generalmagic.magicearth/com.magiclane.androidsphere.map.MapActivity
