add missing CompInfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -18,3 +18,9 @@ adguard:
 
 magic_earth:
   - com.generalmagic.magicearth/com.magiclane.androidsphere.map.MapActivity
+
+mankido:
+  - com.mankido.Mankido/com.mankido.Mankido.MainActivity
+  
+deltec_bank:
+  - com.deltecbank.ebanking/ch.factor8.androidmerlin.RootActivity
