new icon: MyLavash

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ mankido:
   
 deltec_bank:
   - com.deltecbank.ebanking/ch.factor8.androidmerlin.RootActivity
+
+mylavash:
+  - ru.mylavash/ru.mylavash.screens.splash.SplashActivity
