icon link: Yandex.Browser -> Yandex.Browser Beta

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,6 @@ deltec_bank:
 
 mylavash:
   - ru.mylavash/ru.mylavash.screens.splash.SplashActivity
+
+yandex_browser:
+  - com.yandex.browser.beta/com.yandex.browser.YandexBrowserActivity
