new icon: Summit for Lemmy

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ mylavash:
 
 yandex_browser:
   - com.yandex.browser.beta/com.yandex.browser.YandexBrowserActivity
+
+summit_for_lemmy:
+  - com.idunnololz.summit/com.idunnololz.summit.main.MainActivity
