new icon: Hannaford (with Alt)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,11 @@ yandex_browser:
 
 summit_for_lemmy:
   - com.idunnololz.summit/com.idunnololz.summit.main.MainActivity
+
+france_inter:
+  - com.radiofrance.radio.radiofrance.android/com.radiofrance.radio.radiofrance.android.screen.splash.SplashActivity
+
+hannaford:
+  - com.hannaford.mobile/com.hannaford.mobile.MainActivity
+
+hannaford_alt_1: {}
