new icon: Touch Portal

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,6 @@ hannaford:
   - com.hannaford.mobile/com.hannaford.mobile.MainActivity
 
 hannaford_alt_1: {}
+
+touch_portal:
+  - rils.apps.touchportal/rils.apps.touchportal.MainActivity
