new compinfo: Mi Movistar

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,6 @@ hannaford_alt_1: {}
 
 touch_portal:
   - rils.apps.touchportal/rils.apps.touchportal.MainActivity
+
+mi_movistar:
+  - com.movistar.android.mimovistar.es/com.tuenti.messenger.ui.activity.MainActivity
