new icon: Region

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,6 @@ touch_portal:
 
 mi_movistar:
   - com.movistar.android.mimovistar.es/com.tuenti.messenger.ui.activity.MainActivity
+
+region:
+  - kz.taksiregion.client/com.hivetaxi.ui.main.MainActivity
