new icon: Infobus

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,6 @@ mi_movistar:
 
 region:
   - kz.taksiregion.client/com.hivetaxi.ui.main.MainActivity
+
+infobus:
+  - kz.soft.android.infobus/kz.soft.android.infobus.BusNavigatorActivity
