new icon: Weedmaps

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,6 @@ region:
 
 infobus:
   - kz.soft.android.infobus/kz.soft.android.infobus.BusNavigatorActivity
+
+weedmaps:
+  - com.weedmaps.app.android/com.weedmaps.app.android.main.SplashScreenActivity
