new icon: FreeAgent

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,6 @@ infobus:
 
 weedmaps:
   - com.weedmaps.app.android/com.weedmaps.app.android.main.SplashScreenActivity
+
+freeagent:
+  - com.freeagent.mobile/com.freeagent.internal.overview.OverviewActivity
