--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,6 @@ weedmaps:
 
 freeagent:
   - com.freeagent.mobile/com.freeagent.internal.overview.OverviewActivity
+
+destiny_file_transfer:
+  - com.leastauthority.destiny/com.leastauthority.destiny.MainActivity
