new icon: PKP Appka

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,6 @@ freeagent:
 
 destiny_file_transfer:
   - com.leastauthority.destiny/com.leastauthority.destiny.MainActivity
+
+pkp_appka:
+  - pl.pkpik.pasazer.dworce/pl.pkpik.pasazer.dworce.MainActivity
