new icon: POINPY

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -65,3 +65,6 @@ destiny_file_transfer:
 
 pkp_appka:
   - pl.pkpik.pasazer.dworce/pl.pkpik.pasazer.dworce.MainActivity
+
+poinpy:
+  - com.netflix.NGP.Poinpy/com.netflix.NGP.Poinpy.RunnerActivity
