new icon: Sigma Ride

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,6 @@ pkp_appka:
 
 poinpy:
   - com.netflix.NGP.Poinpy/com.netflix.NGP.Poinpy.RunnerActivity
+
+sigma_ride:
+  - com.sigmasport.link2/com.sigmasport.link2.ui.SplashActivity
