new icon: Idle Slayer

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,3 +71,6 @@ poinpy:
 
 sigma_ride:
   - com.sigmasport.link2/com.sigmasport.link2.ui.SplashActivity
+
+idle_slayer:
+  - com.pabloleban.IdleSlayer/com.unity3d.player.UnityPlayerActivity
