new icon: ZLibrary

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,6 @@ sigma_ride:
 
 idle_slayer:
   - com.pabloleban.IdleSlayer/com.unity3d.player.UnityPlayerActivity
+
+zlibrary:
+  - com.positron_it.zlib/com.positron_it.zlib.ui.splash.SplashActivity
