new icon: Word Hippo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -77,3 +77,6 @@ idle_slayer:
 
 zlibrary:
   - com.positron_it.zlib/com.positron_it.zlib.ui.splash.SplashActivity
+
+word_hippo:
+  - com.wordhippo.app/com.wordhippo.app.MainActivity
