--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,75 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+devcheck:
+  - flar2.devcheck/flar2.devcheck.ui.MainActivity2
+
+adguard:
+  - com.adguard.android/com.adguard.android.ui.activity.MainActivity
+  - com.adguard.android/com.adguard.android.ui.activity.SplashActivity
+
+magic_earth:
+  - com.generalmagic.magicearth/com.magiclane.androidsphere.map.MapActivity
+
+mankido:
+  - com.mankido.Mankido/com.mankido.Mankido.MainActivity
+  
+deltec_bank:
+  - com.deltecbank.ebanking/ch.factor8.androidmerlin.RootActivity
+
+mylavash:
+  - ru.mylavash/ru.mylavash.screens.splash.SplashActivity
+
+yandex_browser:
+  - com.yandex.browser.beta/com.yandex.browser.YandexBrowserActivity
+
+summit_for_lemmy:
+  - com.idunnololz.summit/com.idunnololz.summit.main.MainActivity
+
+france_inter:
+  - com.radiofrance.radio.radiofrance.android/com.radiofrance.radio.radiofrance.android.screen.splash.SplashActivity
+
+hannaford:
+  - com.hannaford.mobile/com.hannaford.mobile.MainActivity
+
+hannaford_alt_1: {}
+
+touch_portal:
+  - rils.apps.touchportal/rils.apps.touchportal.MainActivity
+
+mi_movistar:
+  - com.movistar.android.mimovistar.es/com.tuenti.messenger.ui.activity.MainActivity
+
+region:
+  - kz.taksiregion.client/com.hivetaxi.ui.main.MainActivity
+
+infobus:
+  - kz.soft.android.infobus/kz.soft.android.infobus.BusNavigatorActivity
+
+weedmaps:
+  - com.weedmaps.app.android/com.weedmaps.app.android.main.SplashScreenActivity
+
+freeagent:
+  - com.freeagent.mobile/com.freeagent.internal.overview.OverviewActivity
+
+destiny_file_transfer:
+  - com.leastauthority.destiny/com.leastauthority.destiny.MainActivity
+
+pkp_appka:
+  - pl.pkpik.pasazer.dworce/pl.pkpik.pasazer.dworce.MainActivity
+
+poinpy:
+  - com.netflix.NGP.Poinpy/com.netflix.NGP.Poinpy.RunnerActivity
+
+sigma_ride:
+  - com.sigmasport.link2/com.sigmasport.link2.ui.SplashActivity
+
+idle_slayer:
+  - com.pabloleban.IdleSlayer/com.unity3d.player.UnityPlayerActivity
+
+zlibrary:
+  - com.positron_it.zlib/com.positron_it.zlib.ui.splash.SplashActivity
+
+word_hippo:
+  - com.wordhippo.app/com.wordhippo.app.MainActivity
