--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,18 @@ zlibrary:
 
 word_hippo:
   - com.wordhippo.app/com.wordhippo.app.MainActivity
+
+code_studio:
+  - com.alif.ide/com.alif.ide.MainActivity
+
+jstudio:
+  - com.qamar.ide.java/com.alif.ide.java.MainActivity
+
+google_keyboard:
+  - com.google.android.inputmethod.latin/com.google.android.libraries.inputmethod.launcher.LauncherActivity
+
+nakhtem:
+  - com.karim.khatma/com.karim.khatma.run
+
+deezer_alt_1: {}
+ 
