--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,4 +94,15 @@ nakhtem:
   - com.karim.khatma/com.karim.khatma.run
 
 deezer_alt_1: {}
- 
+
+grayjay:
+  - com.futo.platformplayer/com.futo.platformplayer.activities.MainActivity
+
+metronome_foss:
+  - com.bobek.metronome/com.bobek.metronome.MainActivity
+
+pirate_solitaire:
+  - io.itch.pirate_solitaire/com.godot.game.GodotApp
+
+silver_dict:
+  - com.gmail.blandilyte.silverdict/com.gmail.blandilyte.silverdict.MainActivity
