--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,6 +97,7 @@ deezer_alt_1: {}
 
 grayjay:
   - com.futo.platformplayer/com.futo.platformplayer.activities.MainActivity
+  - com.futo.platformplayer.playstore/com.futo.platformplayer.activities.MainActivity
 
 metronome_foss:
   - com.bobek.metronome/com.bobek.metronome.MainActivity
@@ -106,3 +107,15 @@ pirate_solitaire:
 
 silver_dict:
   - com.gmail.blandilyte.silverdict/com.gmail.blandilyte.silverdict.MainActivity
+
+_2048:
+  - org.andstatus.game2048/org.andstatus.game2048.MyMainActivity
+
+cake_wallet:
+  - com.monero.app/com.monero.app.MainActivity
+
+orgzly:
+  - com.orgzlyrevived/com.orgzly.android.ui.LauncherActivity
+
+camera:
+  - com.agc.gcam90/com.android.camera.CameraLauncher
