new icon: SafeSky

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -119,3 +119,6 @@ orgzly:
 
 camera:
   - com.agc.gcam90/com.android.camera.CameraLauncher
+
+safesky:
+  - app.safesky.fis/app.safesky.fis.MainActivity
