new icon: Daily Mail Online

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -122,3 +122,6 @@ camera:
 
 safesky:
   - app.safesky.fis/app.safesky.fis.MainActivity
+
+daily_one_mail:
+  - com.dailymail.online/com.dailymail.online.presentation.splash.SplashActivity
