new icon: Floatplane

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,3 +125,6 @@ safesky:
 
 daily_one_mail:
   - com.dailymail.online/com.dailymail.online.presentation.splash.SplashActivity
+
+floatplane:
+  - com.floatplane.floatplane/com.floatplane.floatplane.MainActivity
