new icon: trunks for Mastodon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -128,3 +128,6 @@ daily_one_mail:
 
 floatplane:
   - com.floatplane.floatplane/com.floatplane.floatplane.MainActivity
+
+trunks_for_mastodon:
+  - com.decad3nce.trunks/com.example.trunks.MainActivity
