new icon: Norwegian Travel Assistant

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -131,3 +131,6 @@ floatplane:
 
 trunks_for_mastodon:
   - com.decad3nce.trunks/com.example.trunks.MainActivity
+
+norwegian_travel_assistant:
+  - com.norwegian.travelassistant/com.norwegian.travelassistant.MainActivity
