new icon: Travelers

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -134,3 +134,6 @@ trunks_for_mastodon:
 
 norwegian_travel_assistant:
   - com.norwegian.travelassistant/com.norwegian.travelassistant.MainActivity
+
+travelers:
+  - com.travelers.digitalservice/com.travelers.digitalservice.SplashActivity
