new icon for TELE2 Swedish and renaming similar icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -137,3 +137,8 @@ norwegian_travel_assistant:
 
 travelers:
   - com.travelers.digitalservice/com.travelers.digitalservice.SplashActivity
+
+tele2_se:
+  - swe.tele2.mittTele2/swe.tele2.mitttele2.ui.startup.SplashScreenActivity
+
+tele2_alt_1: {}
