--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -119,3 +119,26 @@ orgzly:
 
 camera:
   - com.agc.gcam90/com.android.camera.CameraLauncher
+
+safesky:
+  - app.safesky.fis/app.safesky.fis.MainActivity
+
+daily_one_mail:
+  - com.dailymail.online/com.dailymail.online.presentation.splash.SplashActivity
+
+floatplane:
+  - com.floatplane.floatplane/com.floatplane.floatplane.MainActivity
+
+trunks_for_mastodon:
+  - com.decad3nce.trunks/com.example.trunks.MainActivity
+
+norwegian_travel_assistant:
+  - com.norwegian.travelassistant/com.norwegian.travelassistant.MainActivity
+
+travelers:
+  - com.travelers.digitalservice/com.travelers.digitalservice.SplashActivity
+
+tele2_se:
+  - swe.tele2.mittTele2/swe.tele2.mitttele2.ui.startup.SplashScreenActivity
+
+tele2_alt_1: {}
