--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -178,3 +178,6 @@ quitzilla:
 
 pix_material_you:
   - com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.SplashActivity
+
+cloudstream_beta:
+  - com.lagradost.cloudstream3.prerelease/com.lagradost.cloudstream3.ui.account.AccountSelectActivity
