add icons & componentinfo (#725)
* add icons

* add componentinfo

* restore icons, leaving missing componentinfo tho

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -142,3 +142,42 @@ tele2_se:
   - swe.tele2.mittTele2/swe.tele2.mitttele2.ui.startup.SplashScreenActivity
 
 tele2_alt_1: {}
+
+anz_plus:
+  - com.anz.lotus/com.anz.lotus.ui.MainActivity
+
+cyanide_and_happiness:
+  - net.explosm.CyanideAndHappiness/net.explosm.CyanideAndHappiness.MainActivity
+
+drops_icelandic:
+  - com.languagedrops.drops.learn.learning.speak.language.icelandic.words/com.languagedrops.drops.international.MainActivity
+
+isybank:
+  - com.intesasanpaolo.isybank.mobile/com.intesasanpaolo.isybank.mobile.presentation.MainActivity
+
+kwch:
+  - org.kustom.watchface/org.kustom.app.OnBoardingActivity
+
+lemonade_insurance:
+  - com.lemonadeinc.lemonade/com.lemonadeinc.lemonade.ui.core.MainActivity
+
+mapillary:
+  - com.mapillary.app/app.mapillary.android.old.activity.TabbedMainActivity
+
+mta_traintime:
+  - com.mta.mobileapp/com.mta.mobileapp.MainActivity
+
+plees_tracker:
+  - hu.vmiklos.plees_tracker/hu.vmiklos.plees_tracker.MainActivity
+
+popeyes:
+  - com.emn8.mobilem8.nativeapp.popeyes/com.emn8.mobilem8.nativeapp.popeyes.MainActivity
+
+quitzilla:
+  - com.despdev.quitzilla/com.despdev.quitzilla.activities.ActivityMain
+
+pix_material_you:
+  - com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.SplashActivity
+
+cloudstream_beta:
+  - com.lagradost.cloudstream3.prerelease/com.lagradost.cloudstream3.ui.account.AccountSelectActivity
