--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -181,3 +181,42 @@ pix_material_you:
 
 cloudstream_beta:
   - com.lagradost.cloudstream3.prerelease/com.lagradost.cloudstream3.ui.account.AccountSelectActivity
+
+altaufik_vpn:
+  - net.tcodes.altaufikvpn/com.tcodes.altaufikvpn.MainActivity
+
+anime_x_wallpaper:
+  - net.xblacky.animexwallpaper/net.xblacky.animexwallpaper.AppIntroActivity
+
+aurora_poweramp_skin:
+  - com.poweramp.v3.aurora/com.poweramp.v3.aurora.SkinInfoActivity
+
+cmf_watch:
+  - com.nothing.cmf.watch/com.watchmanager.MainActivity
+
+dead_by_daylight_mobile:
+  - com.netease.dbdena/com.epicgames.ue4.SplashActivity
+
+ir_remote:
+  - us.spotco.ir_remote/org.twinone.irremote.ui.MainActivity
+
+right_contacts:
+  - com.goodwy.contacts/com.goodwy.contacts.activities.SplashActivity.Orange
+
+right_files:
+  - com.goodwy.filemanager/com.goodwy.filemanager.activities.SplashActivity.Orange
+
+right_gallery:
+  - com.goodwy.gallery/com.goodwy.gallery.activities.SplashActivity.Orange
+
+right_messages:
+  - com.goodwy.smsmessenger/com.goodwy.smsmessenger.activities.SplashActivity.Orange
+
+text_scanner:
+  - image.to.text.ocr/image.to.text.ocr.activity.MainActivity
+
+tokeii:
+  - com.demomiru.tokeiv2/com.demomiru.tokeiv2.MainActivity
+
+_4messages:
+  - com.goodwy.messages/com.goodwy.messages.feature.main.MainActivity
