add & update icons (#728)
* add compinfo, update icon

* update icon

* add icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,30 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+dantotsu:
+  - ani.dantotsu.beta/ani.dantotsu.MainActivity
+
+android_faker:
+  - com.android1500.androidfaker/com.android1500.androidfaker.ui.activity.MainActivity
+
+deku_sms:
+  - com.afkanerd.deku/com.afkanerd.deku.DefaultSMS.DefaultCheckActivity
+
+homemedikit:
+  - ru.application.homemedkit/ru.application.homemedkit.activities.MainActivity
+
+mi_extras:
+  - com.xiaomi.settings/com.xiaomi.settings.PocoPrefSettingsActivity
+
+phiola:
+  - com.github.stsaz.phiola/com.github.stsaz.phiola.MainActivity
+
+quotes:
+  - phone.vishnu.quotes/phone.vishnu.quotes.activity.SplashActivity
+
+unipass:
+  - io.codespoof.univpassm/io.codespoof.univpassm.AuthActivity
+
+weather_shortcut:
+  - de.kaiserdragon.weathershortcut/de.kaiserdragon.weathershortcut.MainActivity
