--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,12 @@ unipass:
 
 weather_shortcut:
   - de.kaiserdragon.weathershortcut/de.kaiserdragon.weathershortcut.MainActivity
+
+kunaiu:
+ - com.kunaiu.android/com.kunaiu.android.ui.main.MainActivity
+
+serial_reader:
+ - org.mschmitt.serialreader/org.mschmitt.serialreader.SplashClass
+
+fonts_keyboard:
+ - com.fontskeyboard.fonts/com.fontskeyboard.fonts.app.MainActivity
