--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,24 @@ serial_reader:
 
 fonts_keyboard:
  - com.fontskeyboard.fonts/com.fontskeyboard.fonts.app.MainActivity
+
+astron:
+  - cc.astron.player/cc.astron.player.MainActivity
+
+audire:
+  - com.alexmercerind.audire/com.alexmercerind.audire.ui.MainActivity
+
+detoxdroid:
+  - com.flx_apps.digitaldetox/com.flx_apps.digitaldetox.MainActivity
+
+lockqr:
+  - net.uniquecomputer.lockqr/net.uniquecomputer.lockqr.Splash
+
+tool_shells:
+  - com.kakathic.shells/com.kakathic.shells.SplashActivity
+
+autodnd:
+  - moe.dic1911.autodnd/moe.dic1911.autodnd.MainActivity
+
+isos:
+  - com.nineloops.isos/com.unity3d.player.UnityPlayerActivity
