--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -65,3 +65,6 @@ autodnd:
 
 isos:
   - com.nineloops.isos/com.unity3d.player.UnityPlayerActivity
+
+no_icon:
+  - com.f0x1d.dnsmanager/com.f0x1d.dnsmanager.ui.activity.MainActivity
