--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,8 @@
 #
 # new_icon_2_alt_1: {}
 #
+arattai:
+   - com.aratai.chat/com.arattai.home.presentation.ui.HomeActivity
+  
+doc_scanner:
+   - com.zoho.android.documentscanner/com.zoho.android.documentscanner.activities.DocumentListActivity
