add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+jodel:
+  - com.tellm.android.app/com.jodelapp.jodelandroidv3.view.LauncherActivity
+
+openscale:
+  - com.health.openscale.pro/com.health.openscale.gui.MainActivity
+
+cyanide_and_happiness:
+  - im.frantic.jokinghazard/host.exp.exponent.MainActivity
