new icon: IndOASIS

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ openscale:
 
 cyanide_and_happiness:
   - im.frantic.jokinghazard/host.exp.exponent.MainActivity
+
+indoasis:
+  - com.IndianBank.IndOASIS/com.IndianBank.IndOASIS.IndOASISPROD
