new icon: Mi App Vault

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,7 @@ cyanide_and_happiness:
 
 indoasis:
   - com.IndianBank.IndOASIS/com.IndianBank.IndOASIS.IndOASISPROD
+
+mi_app_vault:
+  - com.mi.android.globalminusscreen/com.mi.android.globalminusscreen.tab.MainActivity
+  - com.mi.globalminusscreen/com.mi.globalminusscreen.MainActivity
