new icon: ColorOS Relax

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ indoasis:
 mi_app_vault:
   - com.mi.android.globalminusscreen/com.mi.android.globalminusscreen.tab.MainActivity
   - com.mi.globalminusscreen/com.mi.globalminusscreen.MainActivity
+
+coloros_relax:
+  - com.coloros.relax/com.coloros.relax.ui.MainActivity
