new icon: FinamTrade

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,6 @@ mi_app_vault:
 
 coloros_relax:
   - com.coloros.relax/com.coloros.relax.ui.MainActivity
+
+finamtrade:
+  - ru.finam.android/ru.finam.android.LauncherActivityAlias
